--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "gsap": "^3.12.5",
+    "pixi.js": "^8.6.6",
     "rxjs": "~7.8.0",
+    "simple-parallax-js": "^6.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
